force-app/main/default/objects/Contact/fields/bt_stripe__Default_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Default_Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically set from the related Default Payment Method&apos;s Payment Gateway.</description>
    <inlineHelpText>This field is automatically set from the related Default Payment Method&apos;s Payment Gateway.</inlineHelpText>
    <label>Default Payment Gateway</label>
    <referenceTo>bt_stripe__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>