force-app/main/default/objects/Contact/fields/conference360__BT_External_ID__c.field-meta.xml
<CustomField>
    <fullName>conference360__BT_External_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Used by the Blackthorn Mobile Check In app to identify Contacts with a matching ID found in a non-Blackthorn QR Code.</inlineHelpText>
    <label>BT External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>