force-app/main/default/objects/Contact/fields/conference360__Events_Price_Control__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Price_Control__c</fullName>
    <description>Used to set dynamic pricing for the identified Events user.</description>
    <inlineHelpText>Used to set dynamic pricing for the identified Events user.</inlineHelpText>
    <label>Events Price Control</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Non-member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>