force-app/main/default/objects/Contact/fields/conference360__Login_Failed_Count__c.field-meta.xml
<CustomField>
    <fullName>conference360__Login_Failed_Count__c</fullName>
    <description>The number of times an Events user tried to log into the portal unsuccessfully.</description>
    <inlineHelpText>The number of times an Events user tried to log into the portal unsuccessfully.</inlineHelpText>
    <label>Login Failed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>