force-app/main/default/objects/Contact/fields/CventEvents__ContactStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ContactStub__c</fullName>
    <externalId>true</externalId>
    <label>Cvent Contact Stub</label>
    <length>36</length>
    <type>Text</type>
</CustomField>