force-app/main/default/objects/Contact/fields/HAM_Alternate_Region__c.field-meta.xml
<CustomField>
    <fullName>HAM_Alternate_Region__c</fullName>
    <description>This field is mapped to alternate Chapter&apos;s region field</description>
    <formula>TEXT(HAM_Alternate_Chapter__r.HAM_Region__c)</formula>
    <inlineHelpText>The value is mapped from Alternate Chapter&apos;s region field</inlineHelpText>
    <label>Alternate Region</label>
    <type>Text</type>
</CustomField>