force-app/main/default/objects/Contact/fields/HAM_Campus_Cell__c.field-meta.xml
<CustomField>
    <fullName>HAM_Campus_Cell__c</fullName>
    <description>For Employees only</description>
    <label>Campus Cell</label>
    <type>Phone</type>
</CustomField>