force-app/main/default/objects/Contact/fields/HAM_Current_Calendar_Year_Paid_Total__c.field-meta.xml
<CustomField>
    <fullName>HAM_Current_Calendar_Year_Paid_Total__c</fullName>
    <description>Total amount of gifts received in the current calendar year.</description>
    <inlineHelpText>Total amount of gifts received in the current calendar year.</inlineHelpText>
    <label>Current Calendar Year Paid Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>