force-app/main/default/objects/Contact/fields/HAM_Current_Campaign_Committed__c.field-meta.xml
<CustomField>
    <fullName>HAM_Current_Campaign_Committed__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>This field is populated with aggregate committed from CRMA where campaign priority = &quot;Future Capital Campaign&quot;</description>
    <inlineHelpText>This field is populated with aggregate committed from CRMA where campaign priority = &quot;Future Capital Campaign&quot;</inlineHelpText>
    <label>HAM Current Campaign Committed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>