force-app/main/default/objects/Contact/fields/HAM_Current_Employer_HQ__c.field-meta.xml
<CustomField>
    <fullName>HAM_Current_Employer_HQ__c</fullName>
    <inlineHelpText>This is used on HQ edit profile and profile preview pages.</inlineHelpText>
    <label>Current Employer - HQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>