force-app/main/default/objects/Contact/fields/HAM_Current_FY_Paid_CRMA__c.field-meta.xml
<CustomField>
    <fullName>HAM_Current_FY_Paid_CRMA__c</fullName>
    <description>This field is populated from CRMA</description>
    <inlineHelpText>This field is populated from CRMA</inlineHelpText>
    <label>Current FY Paid CRMA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>