force-app/main/default/objects/Contact/fields/HAM_Current_Regions__c.field-meta.xml
<CustomField>
    <fullName>HAM_Current_Regions__c</fullName>
    <description>This Field is mapped to Current Chapters and can be updated from portal</description>
    <inlineHelpText>This Field is mapped to Current Chapters and can be updated from portal</inlineHelpText>
    <label>Current Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anytown</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Fairfield/Westchester</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Washington, D.C.</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>NYC</fullName>
            </value>
            <value>
                <fullName>Hamilton College</fullName>
            </value>
            <value>
                <fullName>Philadelphia</fullName>
            </value>
            <value>
                <fullName>New York (Mohawk Valley)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>