force-app/main/default/objects/Contact/fields/HAM_Describe_My_Impact__c.field-meta.xml
<CustomField>
    <fullName>HAM_Describe_My_Impact__c</fullName>
    <defaultValue>&apos;Tell Us Your Vision to Impact Hamilton&apos;</defaultValue>
    <description>Tell Us Your Vision to Impact Hamilton</description>
    <inlineHelpText>HQ: Tell Us Your Vision to Impact Hamilton</inlineHelpText>
    <label>Describe My Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>