force-app/main/default/objects/Contact/fields/HAM_Hamilton_Calendar__c.field-meta.xml
<CustomField>
    <fullName>HAM_Hamilton_Calendar__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Unchecked when the &quot;No Hamilton Calendar&quot; Service Indicator is active on this contact.</inlineHelpText>
    <label>Hamilton Calendar</label>
    <type>Checkbox</type>
</CustomField>