force-app/main/default/objects/Contact/fields/HAM_Household_Prospect_Stage__c.field-meta.xml
<CustomField>
    <fullName>HAM_Household_Prospect_Stage__c</fullName>
    <description>This field is used to understand the Constituent Prospect stage from Account&apos;s Prospect Stage.</description>
    <label>Household Prospect Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identified</fullName>
            </value>
            <value>
                <fullName>Qualify</fullName>
            </value>
            <value>
                <fullName>Cultivate/Open</fullName>
            </value>
            <value>
                <fullName>Negotiate/Close</fullName>
            </value>
            <value>
                <fullName>Steward</fullName>
            </value>
            <value>
                <fullName>Not a Prospect</fullName>
            </value>
            <value>
                <fullName>Gatekeeping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>