force-app/main/default/objects/Contact/fields/HAM_Industry__c.field-meta.xml
<CustomField>
    <fullName>HAM_Industry__c</fullName>
    <description>Stores the industry associated with the individual or organization.</description>
    <inlineHelpText>Select the appropriate industry value. This field may be populated from external sources such as LiveAlumni or LinkedIn, or updated manually when needed.</inlineHelpText>
    <label>HAM LiveAlumni  Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Information Technology and Services</fullName>
            </value>
            <value>
                <fullName>Non-profit Organizations</fullName>
            </value>
            <value>
                <fullName>Government Administration</fullName>
            </value>
            <value>
                <fullName>Hospitals and Health Care</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Law Practice</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Primary and Secondary Education</fullName>
            </value>
            <value>
                <fullName>Computers and Electronics Manufacturing</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical Manufacturing</fullName>
            </value>
            <value>
                <fullName>Software Development</fullName>
            </value>
            <value>
                <fullName>Public Policy</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>Management Consulting</fullName>
            </value>
            <value>
                <fullName>Computer Software</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Medical Equipment Manufacturing</fullName>
            </value>
            <value>
                <fullName>IT Services and IT Consulting</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Business Consulting and Services</fullName>
            </value>
            <value>
                <fullName>Primary/Secondary Education</fullName>
            </value>
            <value>
                <fullName>Education Management</fullName>
            </value>
            <value>
                <fullName>Philanthropy</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Legal Services</fullName>
            </value>
            <value>
                <fullName>E-Learning Providers</fullName>
            </value>
            <value>
                <fullName>Hospital &amp; Health Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>