force-app/main/default/objects/Contact/fields/HAM_JABBA_link__c.field-meta.xml
<CustomField>
    <fullName>HAM_JABBA_link__c</fullName>
    <description>Opens the Career Center JABBA Profile page for this contact in a new tab</description>
    <formula>HYPERLINK(&quot;/lightning/n/JABBA_Profile?c__recordId=&quot; &amp; CASESAFEID(Id) &amp; &quot;&amp;c__isAlumni=true&quot;, &quot;Go to JABBA&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opens the Career Center JABBA Profile page for this contact in a new tab</inlineHelpText>
    <label>JABBA link</label>
    <type>Text</type>
</CustomField>