force-app/main/default/objects/Contact/fields/HAM_Last_Calendar_Year_Paid_Total__c.field-meta.xml
<CustomField>
    <fullName>HAM_Last_Calendar_Year_Paid_Total__c</fullName>
    <description>Total amount of gifts received in the previous calendar year.</description>
    <inlineHelpText>Total amount of gifts received in the previous calendar year.</inlineHelpText>
    <label>Last Calendar Year Paid Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>