force-app/main/default/objects/Contact/fields/HAM_Last_HF_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Last_HF_Gift_Date__c</fullName>
    <description>This field will be populated by CRMA in upsert process based on the last Hamilton Fund Gift received.</description>
    <inlineHelpText>This field will be populated by CRMA in daily upsert process based on the last Hamilton Fund Gift received.</inlineHelpText>
    <label>HAM Last HF Gift Date</label>
    <type>Date</type>
</CustomField>