force-app/main/default/objects/Contact/fields/HAM_Lifetime_Paid_CRMA__c.field-meta.xml
<CustomField>
    <fullName>HAM_Lifetime_Paid_CRMA__c</fullName>
    <description>This is CRMA Lifetime Paid field replacing the existing one that just uses the ascend one</description>
    <inlineHelpText>This is CRMA Lifetime Paid field replacing the existing one that just uses the ascend one</inlineHelpText>
    <label>Lifetime Paid CRMA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>