force-app/main/default/objects/Contact/fields/HAM_Overall_Fundraising_Goal_Amount_CYR__c.field-meta.xml
<CustomField>
    <fullName>HAM_Overall_Fundraising_Goal_Amount_CYR__c</fullName>
    <description>The ask amount being pursued this fiscal year for the prospect as a total to be paid. The amount may change over time, and can include more than one initiative.</description>
    <inlineHelpText>The ask amount being pursued this fiscal year for the prospect as a total to be paid. The amount may change over time, and can include more than one initiative.</inlineHelpText>
    <label>CYR Tot. $ Ask</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>