force-app/main/default/objects/Contact/fields/HAM_Preferred_Region__c.field-meta.xml
<CustomField>
    <fullName>HAM_Preferred_Region__c</fullName>
    <description>This matches with the Preferred Chapter Lookup Region</description>
    <formula>TEXT(HAM_Preferred_Chapter_Lookup__r.HAM_Region__c)</formula>
    <inlineHelpText>This value is copied from the Preferred Chapter Lookup Region</inlineHelpText>
    <label>Preferred Region</label>
    <type>Text</type>
</CustomField>