force-app/main/default/objects/Contact/fields/HAM_Rating_Number__c.field-meta.xml
<CustomField>
    <fullName>HAM_Rating_Number__c</fullName>
    <description>The number associated with the wealth rating range - primarily for sorting purposes.</description>
    <formula>CASE(ucinn_ascendv2__Wealth_Rating__c, 
&quot;$100,000,000+&quot;,1,
&quot;$50,000,000-$99,999,999&quot;,2,
&quot;$25,000,000-$49,999,999&quot;,3,
&quot;$10,000,000-$24,999,999&quot;,4,
&quot;$5,000,000-$9,999,999&quot;,5,
&quot;$2,500,000-$4,999,999&quot;,6,
&quot;$1,000,000-$2,499,999&quot;,7,
&quot;$500,000-$999,999&quot;,8,
&quot;$250,000-$499,999&quot;,9,
&quot;$100,000-$249,999&quot;,10,
&quot;$50,000-$99,999&quot;,11,
&quot;$25,000-$49,999&quot;,12,
&quot;$12,500-$24,999&quot;,13,
&quot;Inheritor of Wealth&quot;,14,
15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number associated with the wealth rating range - primarily for sorting purposes.</inlineHelpText>
    <label>Rating Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>