force-app/main/default/objects/Contact/fields/HAM_Send_College_Updates__c.field-meta.xml
<CustomField>
    <fullName>HAM_Send_College_Updates__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Unchecked when the &quot;Do Not Send College Updates&quot; Service Indicator is active on this contact.</inlineHelpText>
    <label>Send College Updates</label>
    <type>Checkbox</type>
</CustomField>