force-app/main/default/objects/Contact/fields/HAM_Send_Event_Invitations__c.field-meta.xml
<CustomField>
    <fullName>HAM_Send_Event_Invitations__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Unchecked when the &quot;Do Not Send Event Invitations&quot; Service Indicator is active on this contact.</inlineHelpText>
    <label>Send Event Invitations</label>
    <type>Checkbox</type>
</CustomField>