force-app/main/default/objects/Contact/fields/HAM_Send_Hamilton_Headlines__c.field-meta.xml
<CustomField>
    <fullName>HAM_Send_Hamilton_Headlines__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Unchecked when the &quot;Do Not Send Hamilton Headlines&quot; Service Indicator is active on this contact.</inlineHelpText>
    <label>Send Hamilton Headlines</label>
    <type>Checkbox</type>
</CustomField>