force-app/main/default/objects/Contact/fields/HAM_Send_Impact_Report__c.field-meta.xml
<CustomField>
    <fullName>HAM_Send_Impact_Report__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Unchecked when the &quot;Do Not Send Impact Report&quot; Service Indicator is active on this contact.</inlineHelpText>
    <label>Send Impact Report</label>
    <type>Checkbox</type>
</CustomField>