force-app/main/default/objects/Contact/fields/HAM_Send_Virtual_Events_Digest__c.field-meta.xml
<CustomField>
    <fullName>HAM_Send_Virtual_Events_Digest__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Unchecked when the &quot;Do Not Send Virtual Events Digest&quot; Service Indicator is active on this contact.</inlineHelpText>
    <label>Send Virtual Events Digest</label>
    <type>Checkbox</type>
</CustomField>