force-app/main/default/objects/Contact/fields/HAM_Show_PRM_Details__c.field-meta.xml
<CustomField>
    <fullName>HAM_Show_PRM_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HAM Show PRM Details</label>
    <type>Checkbox</type>
</CustomField>