force-app/main/default/objects/Contact/fields/HAM_Special_Handling_Notes__c.field-meta.xml
<CustomField>
    <fullName>HAM_Special_Handling_Notes__c</fullName>
    <description>A Special note for internal Hamilton team to be aware of and be on the same page when talking about the constituent across the teams.</description>
    <label>Special Handling Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>