force-app/main/default/objects/Contact/fields/HAM_Trivia_Attempted__c.field-meta.xml
<CustomField>
    <fullName>HAM_Trivia_Attempted__c</fullName>
    <description>To auto-reset the HAM Trivia Attempted checkbox. If the HAM Trivia Attempted Date NOT EQUALS Null, AND HAM Trivia Attempted Date EQUALS Today&apos;s date, Then we check it, else we uncheck it.</description>
    <formula>IF(
 AND(
    NOT(ISBLANK(HAM_Trivia_Attempted_Date__c)),
    HAM_Trivia_Attempted_Date__c = TODAY()
),
True,
False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To auto-reset the HAM Trivia Attempted checkbox.</inlineHelpText>
    <label>HAM Trivia Attempted?</label>
    <type>Checkbox</type>
</CustomField>