force-app/main/default/objects/Contact/fields/HAM_Trivia_Attempted_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Trivia_Attempted_Date__c</fullName>
    <description>Captures the date when an user attempts the Hamilton Trivia in the Alumni Portal</description>
    <inlineHelpText>Captures the date when an user attempts the Hamilton Trivia in the Alumni Portal</inlineHelpText>
    <label>HAM Trivia Attempted Date</label>
    <type>Date</type>
</CustomField>