force-app/main/default/objects/Contact/fields/HAM_Trivia_Option_Chosen__c.field-meta.xml
<CustomField>
    <fullName>HAM_Trivia_Option_Chosen__c</fullName>
    <description>Stores the option chosen for particular Hamilton Trivia question on Alumni Portal</description>
    <inlineHelpText>Stores the option chosen for particular Hamilton Trivia question on Alumni Portal</inlineHelpText>
    <label>HAM Trivia Option Chosen</label>
    <type>TextArea</type>
</CustomField>