force-app/main/default/objects/Contact/fields/HAM_Trivia_Score__c.field-meta.xml
<CustomField>
    <fullName>HAM_Trivia_Score__c</fullName>
    <description>Stores the score of Hamilton Trivia on Alumni Portal</description>
    <inlineHelpText>Stores the score of Hamilton Trivia on Alumni Portal</inlineHelpText>
    <label>HAM Trivia Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>