force-app/main/default/objects/Contact/fields/Hamilton_Portal_Override__c.field-meta.xml
<CustomField>
    <fullName>Hamilton_Portal_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hamilton Portal Override</label>
    <type>Checkbox</type>
</CustomField>