force-app/main/default/objects/Contact/fields/HAMOverall_Fundraising_Goal_Expected_CYR__c.field-meta.xml
<CustomField>
    <fullName>HAMOverall_Fundraising_Goal_Expected_CYR__c</fullName>
    <description>The realistic expected amount this fiscal year for the prospect as a total to be paid. The amount may change over time, and can include more than one initiative.</description>
    <inlineHelpText>The realistic expected amount this fiscal year for the prospect as a total to be paid. The amount may change over time, and can include more than one initiative.</inlineHelpText>
    <label>CYR Tot. Exp $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>