force-app/main/default/objects/Contact/fields/iWave_PROscores__Date_Flagged_for_Automated_Scoring__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__Date_Flagged_for_Automated_Scoring__c</fullName>
    <label>Date Flagged for Automated Scoring</label>
    <type>Date</type>
</CustomField>