force-app/main/default/objects/Contact/fields/iWave_PROscores__DMS_ID__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__DMS_ID__c</fullName>
    <description>Unique ID of the Donor in the CRM</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID of the Donor in the CRM</inlineHelpText>
    <label>DMS ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>