force-app/main/default/objects/Contact/fields/iWave_PROscores__isVerified__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__isVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This iWave Score and Profile has been reviewed and marked as Verified by a user at iWave.com</description>
    <inlineHelpText>This iWave Score and Profile has been reviewed and marked as Verified by a user at iWave.com</inlineHelpText>
    <label>iWave Verified</label>
    <type>Checkbox</type>
</CustomField>