force-app/main/default/objects/Contact/fields/iWave_PROscores__iWave_Contact_is_New__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__iWave_Contact_is_New__c</fullName>
    <description>Used in evaluation criteria for automated scoring elements. If Contact is created less than or equal to 5 minutes from the current time, it will evaluate to true</description>
    <formula>CreatedDate &gt;= (NOW() - 5/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>iWave Contact is New</label>
    <type>Checkbox</type>
</CustomField>