force-app/main/default/objects/Contact/fields/iWave_PROscores__iWave_Donation_Total__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__iWave_Donation_Total__c</fullName>
    <description>The total dollar value of Donations matched within iWave&apos;s VeriGift Donations Database. When ranges are found, the lowest bound of the range is used in this calculation.</description>
    <inlineHelpText>The total dollar value of Donations matched within iWave&apos;s VeriGift Donations Database. When ranges are found, the lowest bound of the range is used in this calculation.</inlineHelpText>
    <label>iWave Donations Total Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>