force-app/main/default/objects/Contact/fields/iWave_PROscores__iWave_Donations__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__iWave_Donations__c</fullName>
    <description>This field is deprecated and no longer used</description>
    <inlineHelpText>This field is deprecated and no longer used</inlineHelpText>
    <label>iWave Donations (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>