force-app/main/default/objects/Contact/fields/iWave_PROscores__iWave_Est_Capacity__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__iWave_Est_Capacity__c</fullName>
    <description>iWave&apos;s Highest 5-Year Giving Capacity Estimate</description>
    <inlineHelpText>iWave&apos;s Highest 5-Year Giving Capacity Estimate</inlineHelpText>
    <label>iWave Est. Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>