force-app/main/default/objects/Contact/fields/iWave_PROscores__iWave_Profile_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__iWave_Profile_Record_ID__c</fullName>
    <label>iWave Profile Record ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>